# fairy-chess

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  build.bat  fairy-chess  main.cpp  run.bat  run.sh
src/: board.cpp  board.hpp  game.cpp  game.hpp  main.cpp  piece.cpp  piece.hpp  pieces.cpp  player.cpp  player.hpp  players.cpp
src/headers/: board.hpp  game.hpp  piece.hpp  pieces.hpp  player.hpp  players.hpp
